<resources>
    <string name="app_name">Home</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="contacts">Contacts</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_contacts">Contacts</string>
    <string name="splash">Splash</string>
    <string name="title_activity_maps">Map</string>
    <string name="maps">maps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="sign_login_blank_fragment">Login Singup</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_fragment">This is home page</string>
</resources>
