<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.infogen.cs.com.menu.MenuActivity">
    <item
        android:id="@+id/home"
        android:orderInCategory="100"
        android:title="@string/home"
        app:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/contacts"
        android:orderInCategory="100"
        android:title="@string/contacts"
        app:showAsAction="never" />

    <item
        android:id="@+id/maps"
        android:orderInCategory="100"
        android:title="@string/maps"
        app:showAsAction="never" />
</menu>
